--- a/Vendita-auto.html
+++ b/Vendita-auto.html
@@ -29,8 +29,9 @@
 
         <section id="auto"></section>
         <h2 class="text-4xl font-bold mb-4">Auto in vendita</h2>
-        <div class="grid grid-cols-1 md:grid-cols-3">
-            <div class="autovendita">
+        
+        <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-8">
+            <div class="h-fit autovendita">
                 <h3 class="text-2xl font-bold">Renault Clio</h3>
                 <h3 class="font-semibold mb-5">Mk.1 16v</h3>
                 <img class="immaginevendita mb-5" src="./assets/images/3.jpg" alt="Renault Clio Mk.1 16v">
@@ -43,14 +44,14 @@
                 <a class="font-semibold" style="font-size: 1.5em;">Prezzo: 1.000.000€<br></a>
 
                 <button class="show-more mt-5 mb-4">Mostra di più</button>
-                <div style="display: none;">
+                <div class="relative" style="display: none;">
                     <a class="font-semibold">Colore:</a> Blu<br>
                     <a class="font-semibold">Interni:</a> Tessuto<br>
                     <a class="font-semibold">Optional:</a> Radio Bluetooth<br>
                 </div>
-
             </div>
-            <div class="autovendita">
+
+            <div class="h-fit autovendita">
                 <h3 class="text-2xl font-bold">Subaru 555</h3>
                 <h3 class="font-semibold mb-5">Edizione 555</h3>
                 <img class="immaginevendita mb-5" src="./assets/images/1.jpg" alt="Renault Clio Mk.1 16v">
@@ -70,7 +71,7 @@
                 </div>
 
             </div>
-            <div class="autovendita">
+            <div class="h-fit autovendita">
                 <h3 class="text-2xl font-bold">Audi S4</h3>
                 <h3 class="font-semibold mb-5">Versione V8</h3>
                 <img class="immaginevendita mb-5" src="./assets/images/4.jpg" alt="Renault Clio Mk.1 16v">
@@ -90,7 +91,7 @@
                 </div>
             </div>
 
-            <div class="autovendita">
+            <div class="h-fit autovendita">
                 <h3 class="text-2xl font-bold">Renault Clio</h3>
                 <h3 class="font-semibold mb-5">Mk.1 16v</h3>
                 <img class="immaginevendita mb-5" src="./assets/images/3.jpg" alt="Renault Clio Mk.1 16v">
@@ -110,7 +111,7 @@
                 </div>
 
             </div>
-            <div class="autovendita">
+            <div class="h-fit autovendita">
                 <h3 class="text-2xl font-bold">Subaru 555</h3>
                 <h3 class="font-semibold mb-5">Edizione 555</h3>
                 <img class="immaginevendita mb-5" src="./assets/images/1.jpg" alt="Renault Clio Mk.1 16v">
@@ -130,7 +131,7 @@
                 </div>
 
             </div>
-            <div class="autovendita">
+            <div class="h-fit autovendita">
                 <h3 class="text-2xl font-bold">Audi S4</h3>
                 <h3 class="font-semibold mb-5">Versione V8</h3>
                 <img class="immaginevendita mb-5" src="./assets/images/4.jpg" alt="Renault Clio Mk.1 16v">
@@ -150,7 +151,7 @@
                 </div>
             </div>
 
-            <div class="autovendita">
+            <div class="h-fit autovendita">
                 <h3 class="text-2xl font-bold">Renault Clio</h3>
                 <h3 class="font-semibold mb-5">Mk.1 16v</h3>
                 <img class="immaginevendita mb-5" src="./assets/images/3.jpg" alt="Renault Clio Mk.1 16v">
@@ -170,7 +171,7 @@
                 </div>
 
             </div>
-            <div class="autovendita">
+            <div class="h-fit autovendita">
                 <h3 class="text-2xl font-bold">Subaru 555</h3>
                 <h3 class="font-semibold mb-5">Edizione 555</h3>
                 <img class="immaginevendita mb-5" src="./assets/images/1.jpg" alt="Renault Clio Mk.1 16v">
@@ -190,7 +191,7 @@
                 </div>
 
             </div>
-            <div class="autovendita">
+            <div class="h-fit autovendita">
                 <h3 class="text-2xl font-bold">Audi S4</h3>
                 <h3 class="font-semibold mb-5">Versione V8</h3>
                 <img class="immaginevendita mb-5" src="./assets/images/4.jpg" alt="Renault Clio Mk.1 16v">
@@ -210,7 +211,7 @@
                 </div>
             </div>
 
-            <div class="autovendita">
+            <div class="h-fit autovendita">
                 <h3 class="text-2xl font-bold">Renault Clio</h3>
                 <h3 class="font-semibold mb-5">Mk.1 16v</h3>
                 <img class="immaginevendita mb-5" src="./assets/images/3.jpg" alt="Renault Clio Mk.1 16v">
@@ -230,7 +231,7 @@
                 </div>
 
             </div>
-            <div class="autovendita">
+            <div class="h-fit autovendita">
                 <h3 class="text-2xl font-bold">Subaru 555</h3>
                 <h3 class="font-semibold mb-5">Edizione 555</h3>
                 <img class="immaginevendita mb-5" src="./assets/images/1.jpg" alt="Renault Clio Mk.1 16v">
@@ -250,7 +251,7 @@
                 </div>
 
             </div>
-            <div class="autovendita">
+            <div class="h-fit autovendita">
                 <h3 class="text-2xl font-bold">Audi S4</h3>
                 <h3 class="font-semibold mb-5">Versione V8</h3>
                 <img class="immaginevendita mb-5" src="./assets/images/4.jpg" alt="Renault Clio Mk.1 16v">
@@ -270,7 +271,7 @@
                 </div>
             </div>
 
-            
+
         </div>
     </div>
 
