--- a/Vendita-auto.html
+++ b/Vendita-auto.html
@@ -17,10 +17,9 @@
         </div>
         <nav
             class="mt-4 md:mt-0 flex flex-row gap-5 text-slate-100 font-semibold md:place-content-end place-content-between">
-            <a class="navboxes md:text-2xl" href="#chi-siamo">Chi Siamo</a>
-            <a class="navboxes md:text-2xl" href="#servizi">Servizi</a>
-            <a class="navboxes md:text-2xl" href="#auto">Auto</a>
-            <a class="navboxes md:text-2xl" href="#dove-siamo">Dove siamo</a>
+            <a class="navboxes md:text-2xl" href="index.html#chi-siamo">Chi Siamo</a>
+            <a class="navboxes md:text-2xl" href="index.html#servizi">Servizi</a>
+            <a class="navboxes md:text-2xl" href="index.html#dove-siamo">Dove siamo</a>
             <a class="navboxes md:text-2xl" href="#contatti">Contatti</a>
         </nav>
     </header>
@@ -274,6 +273,41 @@
 
         </div>
     </div>
+
+    <div class="content flex flex-col gap-8 p-8">
+        <div class="grid grid-rows-2 md:grid-rows-1 md:grid-cols-2">
+            <div class="tabellafondo">
+                <div id="contatti" class="contact">
+                    <h1 class="text-2xl font-semibold mb-4">Contattaci</h1>
+                    <p>Email: <a class="underline decoration-black" href="mailto:">XXX </a><br>
+                        PEC: <a class="underline decoration-black" href="mailto:tomasonisnc@pec.buffetti.it">
+                            tomasonisnc@pec.buffetti.it</a><br>
+                        Telefono: <a class="underline decoration-black" href="tel:035 511338">035 5113389</a><br>
+                        <a class="underline decoration-black" target="_blank"
+                            href="https://maps.app.goo.gl/7apCXDPPx2fwYe469"> Indirizzo: Via LOMBARDIA 8 - 24022 -
+                            ALZANO LOMBARDO (BG)</a>
+                    </p>
+                </div>
+            </div>
+            <div class="tabellafondo items-center">
+                <div id="footer" class="footer">
+                    <h1 class="text-2xl font-semibold mb-8">Orari di apertura</h1>
+                    <p class="mb-10">
+                        <a class="font-semibold">Lun - Ven:</a> 8:30 - 12:30, 14:00 - 19:00<br>
+                        <a class="font-semibold">Sabato:</a> 8:30 - 12:30<br>
+                        <a class="font-semibold">Domenica:</a> Chiuso<br>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="text-center">© 2024 Roberto Tomasoni S.N.C. - C.F./P.IVA: <a class="underline" target="_blank"
+            href="https://www.ufficiocamerale.it/1597/tomasoni-roberto-snc" a>02043710165</a> - Tutti i diritti
+        riservati</p>
+    </div>
+
+    <div class="text-center small-text mb-10">Website created by BiancoGabry</div>
 
     <script src="./assets/scriptvendita.js"></script>
 </body>
