--- a/Vendita-auto.html
+++ b/Vendita-auto.html
@@ -19,7 +19,7 @@
             class="mt-4 md:mt-0 flex flex-row gap-5 text-slate-100 font-semibold md:place-content-end place-content-between">
             <a class="navboxes md:text-2xl" href="index.html#chi-siamo">Chi Siamo</a>
             <a class="navboxes md:text-2xl" href="index.html#servizi">Servizi</a>
-            <a class="navboxes md:text-2xl" href="index.html#dove-siamo">Dove siamo</a>
+            <a class="navboxes md:text-2xl" href="#dove-siamo">Dove siamo</a>
             <a class="navboxes md:text-2xl" href="#contatti">Contatti</a>
         </nav>
     </header>
@@ -273,6 +273,16 @@
 
         </div>
     </div>
+
+    <section id="dove-siamo">
+        <div class="content flex flex-col gap-8 p-8">
+            <h2 class="text-4xl font-bold ">Dove siamo</h2>
+        </div>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4670.994510266154!2d9.7233927!3d45.7272989!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47815748adc528a1%3A0x67f54b880d94257e!2sAuto%20Tomasoni%20Snc!5e1!3m2!1sit!2sit!4v1725662647570!5m2!1sit!2sit"
+            width=100% height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
 
     <div class="content flex flex-col gap-8 p-8">
         <div class="grid grid-rows-2 md:grid-rows-1 md:grid-cols-2">
