--- a/Vendita-auto.html
+++ b/Vendita-auto.html
@@ -275,7 +275,7 @@
     </div>
 
     <section id="dove-siamo">
-        <div class="content flex flex-col gap-8 p-8">
+        <div class="contentvendita flex flex-col gap-8 p-8">
             <h2 class="text-4xl font-bold ">Dove siamo</h2>
         </div>
         <iframe
@@ -284,7 +284,7 @@
             referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
-    <div class="content flex flex-col gap-8 p-8">
+    <div class="contentvendita flex flex-col gap-8 p-8">
         <div class="grid grid-rows-2 md:grid-rows-1 md:grid-cols-2">
             <div class="tabellafondo">
                 <div id="contatti" class="contact">
