--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header p-5 grid grid-cols-1 md:grid-cols-2 bg-[#dd240b] items-center">
         <div class="flex place-content-center md:place-content-start">
-            <img class="h-16 ml-2 logo-stondato" href="index.html" src="./assets/images/logo.jpg" alt="AutoTomasoni">
+            <img class="h-16 ml-2 logo-stondato" src="./assets/images/logo.jpg" alt="AutoTomasoni">
         </div>
         <nav
             class="mt-4 md:mt-0 flex flex-row gap-5 text-slate-100 font-semibold md:place-content-end place-content-between">
