--- a/Vendita-auto.html
+++ b/Vendita-auto.html
@@ -69,6 +69,17 @@
                         <a class="font-semibold">Colore:</a> Blu<br>
                         <a class="font-semibold">Interni:</a> Tessuto<br>
                         <a class="font-semibold">Optional:</a> Radio Bluetooth<br>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='https://www.autoscout24.it/';"
+                                class="pulsante text-center">Vai all'annunio completo</button>
+                        </div>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='#contatti';"
+                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                        </div>
+
                     </div>
 
                 </div>
@@ -89,6 +100,17 @@
                         <a class="font-semibold">Colore:</a> Blu<br>
                         <a class="font-semibold">Interni:</a> Tessuto<br>
                         <a class="font-semibold">Optional:</a> Radio Bluetooth<br>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='https://www.autoscout24.it/';"
+                                class="pulsante text-center">Vai all'annunio completo</button>
+                        </div>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='#contatti';"
+                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                        </div>
+
                     </div>
                 </div>
 
@@ -109,6 +131,17 @@
                         <a class="font-semibold">Colore:</a> Blu<br>
                         <a class="font-semibold">Interni:</a> Tessuto<br>
                         <a class="font-semibold">Optional:</a> Radio Bluetooth<br>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='https://www.autoscout24.it/';"
+                                class="pulsante text-center">Vai all'annunio completo</button>
+                        </div>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='#contatti';"
+                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                        </div>
+
                     </div>
 
                 </div>
@@ -129,6 +162,17 @@
                         <a class="font-semibold">Colore:</a> Blu<br>
                         <a class="font-semibold">Interni:</a> Tessuto<br>
                         <a class="font-semibold">Optional:</a> Radio Bluetooth<br>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='https://www.autoscout24.it/';"
+                                class="pulsante text-center">Vai all'annunio completo</button>
+                        </div>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='#contatti';"
+                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                        </div>
+
                     </div>
 
                 </div>
@@ -149,6 +193,17 @@
                         <a class="font-semibold">Colore:</a> Blu<br>
                         <a class="font-semibold">Interni:</a> Tessuto<br>
                         <a class="font-semibold">Optional:</a> Radio Bluetooth<br>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='https://www.autoscout24.it/';"
+                                class="pulsante text-center">Vai all'annunio completo</button>
+                        </div>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='#contatti';"
+                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                        </div>
+
                     </div>
                 </div>
 
@@ -169,6 +224,17 @@
                         <a class="font-semibold">Colore:</a> Blu<br>
                         <a class="font-semibold">Interni:</a> Tessuto<br>
                         <a class="font-semibold">Optional:</a> Radio Bluetooth<br>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='https://www.autoscout24.it/';"
+                                class="pulsante text-center">Vai all'annunio completo</button>
+                        </div>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='#contatti';"
+                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                        </div>
+
                     </div>
 
                 </div>
@@ -189,6 +255,17 @@
                         <a class="font-semibold">Colore:</a> Blu<br>
                         <a class="font-semibold">Interni:</a> Tessuto<br>
                         <a class="font-semibold">Optional:</a> Radio Bluetooth<br>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='https://www.autoscout24.it/';"
+                                class="pulsante text-center">Vai all'annunio completo</button>
+                        </div>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='#contatti';"
+                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                        </div>
+
                     </div>
 
                 </div>
@@ -209,6 +286,17 @@
                         <a class="font-semibold">Colore:</a> Blu<br>
                         <a class="font-semibold">Interni:</a> Tessuto<br>
                         <a class="font-semibold">Optional:</a> Radio Bluetooth<br>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='https://www.autoscout24.it/';"
+                                class="pulsante text-center">Vai all'annunio completo</button>
+                        </div>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='#contatti';"
+                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                        </div>
+
                     </div>
                 </div>
 
@@ -229,6 +317,17 @@
                         <a class="font-semibold">Colore:</a> Blu<br>
                         <a class="font-semibold">Interni:</a> Tessuto<br>
                         <a class="font-semibold">Optional:</a> Radio Bluetooth<br>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='https://www.autoscout24.it/';"
+                                class="pulsante text-center">Vai all'annunio completo</button>
+                        </div>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='#contatti';"
+                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                        </div>
+
                     </div>
 
                 </div>
@@ -249,6 +348,17 @@
                         <a class="font-semibold">Colore:</a> Blu<br>
                         <a class="font-semibold">Interni:</a> Tessuto<br>
                         <a class="font-semibold">Optional:</a> Radio Bluetooth<br>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='https://www.autoscout24.it/';"
+                                class="pulsante text-center">Vai all'annunio completo</button>
+                        </div>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='#contatti';"
+                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                        </div>
+
                     </div>
 
                 </div>
@@ -269,15 +379,27 @@
                         <a class="font-semibold">Colore:</a> Blu<br>
                         <a class="font-semibold">Interni:</a> Tessuto<br>
                         <a class="font-semibold">Optional:</a> Radio Bluetooth<br>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='https://www.autoscout24.it/';"
+                                class="pulsante text-center">Vai all'annunio completo</button>
+                        </div>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='#contatti';"
+                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                        </div>
+
                     </div>
                 </div>
-            </div>
-
-            <div class="centra-pulsante mt-10">
-                <button onclick="window.location.href='index.html';" class="pulsante text-center text-2xl">Ritorna alla pagina iniziale</button>
             </div>
 
         </section>
+
+        <div class="flex flex w-full place-content-center">
+            <button onclick="window.location.href='index.html';" class="pulsante text-center text-2xl">Ritorna alla pagina iniziale</button>
+        </div>
+
     </div>
 
 
