--- a/index.html
+++ b/index.html
@@ -129,6 +129,17 @@
                         <a class="font-semibold">Colore:</a> Blu<br>
                         <a class="font-semibold">Interni:</a> Tessuto<br>
                         <a class="font-semibold">Optional:</a> Radio Bluetooth<br>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='https://www.autoscout24.it/';"
+                                class="pulsante text-center">Vai all'annunio completo</button>
+                        </div>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='#contatti';"
+                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                        </div>
+
                     </div>
 
                 </div>
@@ -149,6 +160,17 @@
                         <a class="font-semibold">Colore:</a> Blu<br>
                         <a class="font-semibold">Interni:</a> Tessuto<br>
                         <a class="font-semibold">Optional:</a> Radio Bluetooth<br>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='https://www.autoscout24.it/';"
+                                class="pulsante text-center">Vai all'annunio completo</button>
+                        </div>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='#contatti';"
+                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                        </div>
+
                     </div>
 
                 </div>
@@ -169,18 +191,27 @@
                         <a class="font-semibold">Colore:</a> Blu<br>
                         <a class="font-semibold">Interni:</a> Tessuto<br>
                         <a class="font-semibold">Optional:</a> Radio Bluetooth<br>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='https://www.autoscout24.it/';"
+                                class="pulsante text-center">Vai all'annunio completo</button>
+                        </div>
+
+                        <div class="flex w-full place-content-center mt-4">
+                            <button onclick="window.location.href='#contatti';"
+                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                        </div>
+
                     </div>
-
                 </div>
-            </div>
-
-            <div class="centra-pulsante mt-10">
-                <button onclick="window.location.href='./vendita-auto.html';" class="pulsante text-center text-2xl">Vai
-                    alle altre macchine in vendita</button>
-            </div>
 
         </section>
 
+        <div class="flex w-full place-content-center">
+            <button onclick="window.location.href='./vendita-auto.html';"
+                class="pulsante text-center text-2xl">Vai alle altre macchine in vendita</button>
+        </div>
+        
     </div>
 
 
