--- a/Vendita-auto.html
+++ b/Vendita-auto.html
@@ -72,7 +72,7 @@
 
                         <div class="flex w-full place-content-center mt-4">
                             <button onclick="window.location.href='https://www.autoscout24.it/';"
-                                class="pulsante text-center">Vai all'annunio completo</button>
+                                class="pulsante text-center">Vai all'annuncio completo</button>
                         </div>
 
                         <div class="flex w-full place-content-center mt-4">
@@ -103,7 +103,7 @@
 
                         <div class="flex w-full place-content-center mt-4">
                             <button onclick="window.location.href='https://www.autoscout24.it/';"
-                                class="pulsante text-center">Vai all'annunio completo</button>
+                                class="pulsante text-center">Vai all'annuncio completo</button>
                         </div>
 
                         <div class="flex w-full place-content-center mt-4">
@@ -134,7 +134,7 @@
 
                         <div class="flex w-full place-content-center mt-4">
                             <button onclick="window.location.href='https://www.autoscout24.it/';"
-                                class="pulsante text-center">Vai all'annunio completo</button>
+                                class="pulsante text-center">Vai all'annuncio completo</button>
                         </div>
 
                         <div class="flex w-full place-content-center mt-4">
@@ -165,7 +165,7 @@
 
                         <div class="flex w-full place-content-center mt-4">
                             <button onclick="window.location.href='https://www.autoscout24.it/';"
-                                class="pulsante text-center">Vai all'annunio completo</button>
+                                class="pulsante text-center">Vai all'annuncio completo</button>
                         </div>
 
                         <div class="flex w-full place-content-center mt-4">
@@ -196,7 +196,7 @@
 
                         <div class="flex w-full place-content-center mt-4">
                             <button onclick="window.location.href='https://www.autoscout24.it/';"
-                                class="pulsante text-center">Vai all'annunio completo</button>
+                                class="pulsante text-center">Vai all'annuncio completo</button>
                         </div>
 
                         <div class="flex w-full place-content-center mt-4">
@@ -227,7 +227,7 @@
 
                         <div class="flex w-full place-content-center mt-4">
                             <button onclick="window.location.href='https://www.autoscout24.it/';"
-                                class="pulsante text-center">Vai all'annunio completo</button>
+                                class="pulsante text-center">Vai all'annuncio completo</button>
                         </div>
 
                         <div class="flex w-full place-content-center mt-4">
@@ -258,7 +258,7 @@
 
                         <div class="flex w-full place-content-center mt-4">
                             <button onclick="window.location.href='https://www.autoscout24.it/';"
-                                class="pulsante text-center">Vai all'annunio completo</button>
+                                class="pulsante text-center">Vai all'annuncio completo</button>
                         </div>
 
                         <div class="flex w-full place-content-center mt-4">
@@ -289,7 +289,7 @@
 
                         <div class="flex w-full place-content-center mt-4">
                             <button onclick="window.location.href='https://www.autoscout24.it/';"
-                                class="pulsante text-center">Vai all'annunio completo</button>
+                                class="pulsante text-center">Vai all'annuncio completo</button>
                         </div>
 
                         <div class="flex w-full place-content-center mt-4">
@@ -320,7 +320,7 @@
 
                         <div class="flex w-full place-content-center mt-4">
                             <button onclick="window.location.href='https://www.autoscout24.it/';"
-                                class="pulsante text-center">Vai all'annunio completo</button>
+                                class="pulsante text-center">Vai all'annuncio completo</button>
                         </div>
 
                         <div class="flex w-full place-content-center mt-4">
@@ -351,7 +351,7 @@
 
                         <div class="flex w-full place-content-center mt-4">
                             <button onclick="window.location.href='https://www.autoscout24.it/';"
-                                class="pulsante text-center">Vai all'annunio completo</button>
+                                class="pulsante text-center">Vai all'annuncio completo</button>
                         </div>
 
                         <div class="flex w-full place-content-center mt-4">
@@ -382,7 +382,7 @@
 
                         <div class="flex w-full place-content-center mt-4">
                             <button onclick="window.location.href='https://www.autoscout24.it/';"
-                                class="pulsante text-center">Vai all'annunio completo</button>
+                                class="pulsante text-center">Vai all'annuncio completo</button>
                         </div>
 
                         <div class="flex w-full place-content-center mt-4">
